--- a/download/data_format/index.html
+++ b/download/data_format/index.html
@@ -392,25 +392,15 @@
 </p>
 
 <ul>
-  <li><code>'/dvs/events'</code> (<a 
+  <li><code>'/capture_node/events'</code> (<a 
     href="https://github.com/uzh-rpg/rpg_dvs_ros/blob/master/dvs_msgs/msg/EventArray.msg" 
     target="_blank" rel="noreferrer noopener" 
     >dv_ros_msgs/EventArray</a>): Events from the Inivation DVXplorer camera.</li>
 
-  <li><code>'/aps/image_raw'</code> (<a 
+  <li><code>'/image_raw'</code> (<a 
     href="https://docs.ros.org/en/noetic/api/sensor_msgs/html/msg/Image.html" 
     target="_blank" rel="noreferrer noopener" 
     >sensor_msgs/Image</a>): Color images from the RGB camera.</li>
-
-  <li><code>'/dvs/bounding_box'</code> (<a 
-    href="https://github.com/NAIL-HNU/splitter_driver/blob/main/strttc_msgs/msg/boundingbox_message.msg" 
-    target="_blank" rel="noreferrer noopener" 
-    >strttc_msgs/boundingbox_message</a>): The bounding box of the collision target in the event camera's pixel coordinate system.</li>
-
-  <li><code>'/gt_ttc'</code> (<a 
-    href="https://github.com/NAIL-HNU/splitter_driver/blob/main/strttc_msgs/msg/ttc_message.msg" 
-    target="_blank" rel="noreferrer noopener" 
-    >strttc_msgs/ttc_message</a>): Ground truth TTC.</li>
 </ul>
 
 
