--- a/competition/index.html
+++ b/competition/index.html
@@ -237,33 +237,35 @@
           <!-- Each list item is a link that will scroll to a specific section -->
           <li><strong> CCRs1-slow:</strong> 
             <a href="https://drive.google.com/file/d/1W0QsG-5-6uBPLpa2qDdmvfhk6OaF7iK4/view?usp=sharing" target="_blank" rel="noopener noreferrer">hdf5 (550.1 M)</a>   |  
-            <a href="https://drive.google.com/file/d/1A7e17Tzjk0KiIkr9OQBHl98lBqx7x29J/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
+            <a href="https://drive.google.com/file/d/1Ae5OwM5g4zVA47gwvDSMG_IPJkd_sN7Y/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
           </li>
           <li><strong> CCRs1-medium:</strong> 
             <a href="https://drive.google.com/file/d/1Z1I6p8LqwVK_y0Y2-zQfHFdZqgQRsF0u/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (540 M)</a>   |  
-            <a href="https://drive.google.com/file/d/1hPhoBH9JWjDs73IGs52SgA5LNnJAWyIs/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
+            <a href="https://drive.google.com/file/d/1GaItsoIlj_I1zklcjt4VSl2DJc2Fn5lg/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
           </li>
           <li><strong> CCRs1-high:</strong> 
             <a href="https://drive.google.com/file/d/1O1ir24X0NJpiCciTtvMig_swgeCray1Z/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (554.7 M)</a>   |  
-            <a href="https://drive.google.com/file/d/1UZItGVyUdmZNCEEDYL8npm2w4MHPXss0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (0.9 K)</a> 
+            <a href="https://drive.google.com/file/d/13dGLz4wRvGIKVyqRB-CpeP7QQzznevmS/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (0.9 K)</a> 
           </li>
           <li><strong> CCRs2-low:</strong> 
             <a href="https://drive.google.com/file/d/1kV-GEwfRaNwNCzO-eHdquxd3kuscFSVS/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (667.9 M)</a>   |  
-            <a href="https://drive.google.com/file/d/1VZ_srkEZ6T1tz3qpILt3_2CVhWZQcfxV/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
+            <a href="https://drive.google.com/file/d/1GYi--vibnRn7Zz4eIjudf9sa0BTm6Yvg/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
           </li>
           <li><strong> CCRs2-medium:</strong> 
             <a href="https://drive.google.com/file/d/1h4l6o1tkpPBr1gMWA3HXOjo7PACZzZXJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (861.2 M)</a>   |  
-            <a href="https://drive.google.com/file/d/1xqsELWB3mYcXoct7xrclPcYT95do2zIz/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (2 K)</a> 
+            <a href="https://drive.google.com/file/d/1S2YtyqWQ8nlfsfzcV_UC97AYLzOFGffT/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (2 K)</a> 
           </li>
-          <li><strong> CCRs2-high:</strong> <a href="https://drive.google.com/file/d/1I_F1Gn4X9y3nvbFYLv642aBxh_oTx3h4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (964.9 M)</a>   |  
-            <a href="https://drive.google.com/file/d/1KhMljhgmcjUKS81VTu8Tvnnn6i6dIgg4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (2 K)</a> 
+          <li><strong> CCRs2-high:</strong> 
+            <a href="https://drive.google.com/file/d/1I_F1Gn4X9y3nvbFYLv642aBxh_oTx3h4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (964.9 M)</a>   |  
+            <a href="https://drive.google.com/file/d/1z_KBBhNsryx_Do22YjRy8lkxgAvdW2Ea/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (2 K)</a> 
           </li>
           <li><strong> CCRm-low:</strong> 
             <a href="https://drive.google.com/file/d/1EgJiJ9x7mk578_J9IENzzld3Jj6Of35B/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (717.7 M)</a>   |  
-            <a href="https://drive.google.com/file/d/188LLzHPexi7tQRUbs2qrLxzqaHdi7Boi/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
+            <a href="https://drive.google.com/file/d/1oz5BaHy4vlG-p6rodc68Kb07ednRnmQn/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
           </li>
-          <li><strong> CCRm-medium:</strong> <a href="https://drive.google.com/file/d/1H70fwUwFHwPh1EjD0xP20Xp7hP0Se4i-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (708.6 M)</a>   |  
-            <a href="https://drive.google.com/file/d/1u_TR9arPmaq_vfQ_Ac2VgKBqyqzgzuZm/view?usp=drive_link" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
+          <li><strong> CCRm-medium:</strong> 
+            <a href="https://drive.google.com/file/d/1H70fwUwFHwPh1EjD0xP20Xp7hP0Se4i-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (708.6 M)</a>   |  
+            <a href="https://drive.google.com/file/d/1Urq18sZ7LkKa38dNYyEt8-e0A231WKzM/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
           </li>
           <li><strong> Slider-750:</strong> 
             <a href="https://drive.google.com/file/d/1AQhT2fOkhVk5mI2gIIzNFJmbSeANXBAS/view?usp=drive_link" target="_blank" rel="noopener noreferrer">rosbag (516.6 M)</a>   |  
