Add download link

--- a/calibration/index.html
+++ b/calibration/index.html
@@ -177,7 +177,7 @@
   individually. The clocks of the cameras were synchronized
   using external trigger signals. We employed the simple image
   recon library to reconstruct the event stream at the midpoint
-  of the RGB image exposure. This library utilizes the methods
+  of the RG image exposure. This library utilizes the methods
   described in Frequency Cam.
 </p>
 <div class="content-box">
@@ -187,12 +187,12 @@
   <li>
   <strong>8-mm Lens Camera Pair</strong>: 
   <a href="https://drive.google.com/file/d/19YwIu2Ulah9kU-f-G4Ng5cN4TZQIqErm/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-  <a href="https://drive.google.com/file/d/1OLvbSf_az4sr8R4KHTz7-rESujEgselB/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (4.63 GB)</a>
+  <a href="https://drive.google.com/file/d/1OLvbSf_az4sr8R4KHTz7-rESujEgselB/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (4.63 G)</a>
   </li>
   <li>
   <strong>16-mm Lens Camera Pair</strong>: 
   <a href="https://drive.google.com/file/d/122UToq2FEy0TpaGd-5MtdT9Hv5k0BMCh/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-  <a href="https://drive.google.com/file/d/137IznX7TMryi6aABN19VrUN3N-6MAG63/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (5.81 GB)</a>
+  <a href="https://drive.google.com/file/d/137IznX7TMryi6aABN19VrUN3N-6MAG63/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (5.81 G)</a>
   </li>
 </ul>
 
@@ -201,12 +201,12 @@
   <li>
   <strong>8-mm Lens Camera Pair</strong>: 
   <a href="https://drive.google.com/file/d/1FCUiYHvXE4_mFuMIonTv_XgQ8hgH6GRY/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-  <a href="https://drive.google.com/file/d/15SUKXImmFwYHYLINSbSFObYUQ4MVF0AA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (7.21 GB)</a>
+  <a href="https://drive.google.com/file/d/15SUKXImmFwYHYLINSbSFObYUQ4MVF0AA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (7.21 G)</a>
   </li>
   <li>
   <strong>16-mm Lens Camera Pair</strong>: 
   <a href="https://drive.google.com/file/d/1aCf988QT11n9Bz7ARYCkOshRh1JP5MZR/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-  <a href="https://drive.google.com/file/d/1g5YUi7FMGWqdQFq7ga8ivkUJxEz7NxCm/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (6.5 GB)</a>
+  <a href="https://drive.google.com/file/d/1g5YUi7FMGWqdQFq7ga8ivkUJxEz7NxCm/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (6.5 G)</a>
   </li>
 </ul>
 
@@ -215,12 +215,12 @@
   <li>
   <strong>8-mm Lens Camera Pair</strong>: 
   <a href="https://drive.google.com/file/d/1BD8n7cAvB0Qxr2XsxFt1pttkjiyyPG1q/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-  <a href="https://drive.google.com/file/d/1o978z0eJHe35k_UYUQyf2KnmsFjYi03M/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (6.14 GB)</a>
+  <a href="https://drive.google.com/file/d/1o978z0eJHe35k_UYUQyf2KnmsFjYi03M/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (6.14 G)</a>
   </li>
   <li>
   <strong>16-mm Lens Camera Pair</strong>: 
   <a href="https://drive.google.com/file/d/1trjSa0natTm8EFS2FG8Ys6XKwHYCI3bl/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-  <a href="https://drive.google.com/file/d/1SiJ15O7wdHA3hlkno6sFjRvE3jMj3I9X/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (7.15 GB)</a>
+  <a href="https://drive.google.com/file/d/1SiJ15O7wdHA3hlkno6sFjRvE3jMj3I9X/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (7.15 G)</a>
   </li>
 </ul>
 </div>
@@ -241,42 +241,42 @@
   <h5>2024-07-15</h5>
   <ul>
     <li>
-    <strong>8-mm Lens RGB Camera with IMU</strong>: 
+    <strong>8-mm Lens RG Camera with IMU</strong>: 
     <a href="https://drive.google.com/file/d/1ohuL98XzGUiebZ79qa8mQGxqtfy-ubVh/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-    <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (2.13 GB)</a>
+    <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (2.13 G)</a>
     </li>
     <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: 
+    <strong>16-mm Lens RG Camera with IMU</strong>: 
     <a href="https://drive.google.com/file/d/1xcaIaikNDe7cuOirI9T_Q5sy_c4xi2-5/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-    <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (1.62 GB)</a>
+    <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (1.62 G)</a>
     </li>
   </ul>
 
   <h5>2024-08-08</h5>
   <ul>
     <li>
-    <strong>8-mm Lens RGB Camera with IMU</strong>: 
+    <strong>8-mm Lens RG Camera with IMU</strong>: 
     <a href="https://drive.google.com/file/d/142_cg4XbH27pISEE8jFuwN2YLWmj8pEj/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-    <a href="https://drive.google.com/file/d/13RavRXooJbYAszfPLB3q8Ygt6gzKetKJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (2.21 GB)</a>
+    <a href="https://drive.google.com/file/d/13RavRXooJbYAszfPLB3q8Ygt6gzKetKJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (2.21 G)</a>
     </li>
     <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: 
+    <strong>16-mm Lens RG Camera with IMU</strong>: 
     <a href="https://drive.google.com/file/d/18_SRpUyN1uoaa_rqyN5TXsZU6AyBvbdU/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-    <a href="https://drive.google.com/file/d/12eZukyuVtXmcSGfAcfpgWsXbBo4Q2Q-H/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (3.1 GB)</a>
+    <a href="https://drive.google.com/file/d/12eZukyuVtXmcSGfAcfpgWsXbBo4Q2Q-H/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (3.1 G)</a>
     </li>
   </ul>
 
   <h5>2024-09-25</h5>
   <ul>
     <li>
-    <strong>8-mm Lens RGB Camera with IMU</strong>: 
+    <strong>8-mm Lens RG Camera with IMU</strong>: 
     <a href="https://drive.google.com/file/d/1aIMKGVF2qyLMoMa3g158b1tpO9MutVgN/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-    <a href="https://drive.google.com/file/d/1a-ZgAcAk-6HMxSw1s8Q8TgQSBSxDKw_5/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (1.64 GB)</a>
+    <a href="https://drive.google.com/file/d/1a-ZgAcAk-6HMxSw1s8Q8TgQSBSxDKw_5/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (1.64 G)</a>
     </li>
     <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: 
+    <strong>16-mm Lens RG Camera with IMU</strong>: 
     <a href="https://drive.google.com/file/d/1i4ZNSqSvAjen-NSMrYSKFK8tU9O9HwSp/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-    <a href="https://drive.google.com/file/d/1RWz0qJ1rmFzbW32OvLUYgPPdYpZFvsWU/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (1.75 GB)</a>
+    <a href="https://drive.google.com/file/d/1RWz0qJ1rmFzbW32OvLUYgPPdYpZFvsWU/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (1.75 G)</a>
     </li>
   </ul>
   </div>
@@ -284,10 +284,10 @@
 <h4>Extrinsic Calibration of Cameras and LiDAR</h4>
 
 <p>
-  To calibrate the extrinsic parameters between the RGB camera
+  To calibrate the extrinsic parameters between the RG camera
   and the LiDAR, we first stabilize the sensor setup and
   accumulate several frames of LiDAR point clouds along with
-  the corresponding RGB images captured at the same time.
+  the corresponding RG images captured at the same time.
   We then use the CAD models of both sensors to provide an
   initial transformation and carefully fine-tune the alignment
   using the Manual Calibration Tool in the 
@@ -299,42 +299,42 @@
   <h5>2024-07-15</h5>
   <ul>
     <li>
-      <strong>8-mm Lens RGB Camera with LiDAR</strong>: 
+      <strong>8-mm Lens RG Camera with LiDAR</strong>: 
       <a href="https://drive.google.com/file/d/1rFio_zRPNvLAMtaVCBmYBMoZghpXOwyq/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-      <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (17.4 MB)</a>
+      <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (17.4 M)</a>
       </li>
       <li>
-      <strong>16-mm Lens RGB Camera with LiDAR</strong>: 
-      <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGbMLanPhOcHR6eKXH3h/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-      <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (17.9 MB)</a>
+      <strong>16-mm Lens RG Camera with LiDAR</strong>: 
+      <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGMLanPhOcHR6eKXH3h/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
+      <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (17.9 M)</a>
       </li>
   </ul>
 
   <h5>2024-08-08</h5>
   <ul>
     <li>
-      <strong>8-mm Lens RGB Camera with LiDAR</strong>: 
+      <strong>8-mm Lens RG Camera with LiDAR</strong>: 
       <a href="https://drive.google.com/file/d/1vMM3wGKwR-ofApUJBT_Pn0uxH__-3qfe/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-      <a href="https://drive.google.com/drive/folders/1BXTN-Raa8pI86lSOKVrjJIxwozgjZL8i?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (19.1 MB)</a>
+      <a href="https://drive.google.com/drive/folders/1BXTN-Raa8pI86lSOKVrjJIxwozgjZL8i?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (19.1 M)</a>
       </li>
       <li>
-      <strong>16-mm Lens RGB Camera with LiDAR</strong>: 
+      <strong>16-mm Lens RG Camera with LiDAR</strong>: 
       <a href="https://drive.google.com/file/d/1BXTAIAvHLtJxchoVbiCpURIefd6dYvb1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-      <a href="https://drive.google.com/drive/folders/1jsTlx4mCrp88y4h7QQgrFtiQ8wmAUd06?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (25.4 MB)</a>
+      <a href="https://drive.google.com/drive/folders/1jsTlx4mCrp88y4h7QQgrFtiQ8wmAUd06?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (25.4 M)</a>
       </li>
   </ul>
 
   <h5>2024-09-25</h5>
   <ul>
     <li>
-      <strong>8-mm Lens RGB Camera with LiDAR</strong>: 
-      <a href="https://drive.google.com/file/d/1a529hoxk-UDdtS31eatMbEnGwTMS53z9/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-      <a href="https://drive.google.com/drive/folders/1Ffqo36xVFgoQl5ci31Fbjg08eAeleYDn?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (22.3 MB)</a>
+      <strong>8-mm Lens RG Camera with LiDAR</strong>: 
+      <a href="https://drive.google.com/file/d/1a529hoxk-UDdtS31eatMEnGwTMS53z9/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
+      <a href="https://drive.google.com/drive/folders/1Ffqo36xVFgoQl5ci31Fbjg08eAeleYDn?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (22.3 M)</a>
       </li>
       <li>
-      <strong>16-mm Lens RGB Camera with LiDAR</strong>: 
+      <strong>16-mm Lens RG Camera with LiDAR</strong>: 
       <a href="https://drive.google.com/file/d/18utc8IsIVZNxTZzdTHqYE71JuCQH57oU/view?usp=drive_link" target="_blank" rel="noopener noreferrer">results</a>   |  
-      <a href="https://drive.google.com/drive/folders/1ZVRzSRP9lMhvjRNEyfpK1ezHeLX79sQp?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (22.7 MB)</a>
+      <a href="https://drive.google.com/drive/folders/1ZVRzSRP9lMhvjRNEyfpK1ezHeLX79sQp?usp=drive_link" target="_blank" rel="noopener noreferrer">raw data (22.7 M)</a>
       </li>
   </ul>
 </div>
