--- a/competition/index.html
+++ b/competition/index.html
@@ -235,7 +235,7 @@
         </p>
         <ul>
           <!-- Each list item is a link that will scroll to a specific section -->
-          <li><strong> CCRs1-slow:</strong> 
+          <li><strong> CCRs1-low:</strong> 
             <a href="https://drive.google.com/file/d/1W0QsG-5-6uBPLpa2qDdmvfhk6OaF7iK4/view?usp=sharing" target="_blank" rel="noopener noreferrer">hdf5 (550.1 M)</a>   |  
             <a href="https://drive.google.com/file/d/1Ae5OwM5g4zVA47gwvDSMG_IPJkd_sN7Y/view?usp=sharing" target="_blank" rel="noopener noreferrer">bbox (1 K)</a> 
           </li>
@@ -1662,6 +1662,7 @@
             <td>6</td>
             <td>Image's FoE</td>
             <td><a href="https://ieeexplore.ieee.org/document/7477608" target="_blank" rel="noopener noreferrer">paper</a></td>
+            <td></td>
             <td>
               <div>
                 <img src="/EvTTC/assets/img/icon/icon-16mm.png" class="icon-img-table"
